readability and visual pollution fixes
i had too many fonts and colors and everything. moving to less jarring
color usage

--- a/src/css/pages/about.css
+++ b/src/css/pages/about.css
@@ -6,7 +6,7 @@
   }
 
   .about-timeframe {
-    @apply fancy-border pb-1 mb-3 text-pink;
+    @apply fancy-border pb-1 mb-3 mt-12 text-pink;
     @apply flex flex-row items-center justify-between;
   }
 }
